# apphub

./: .dockerignore  .env.gke-autopilot.template  .gcloudignore  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  JOBS_SPEC.md  README.md  SECURITY.md  auto_ecosystem_setup.sh  dump.rdb  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  workflow.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
docker/: Dockerfile.services  demo-stack.compose.yml  demo.env.sample  e2e-stack.compose.yml  frontend.nginx.conf  observatory-e2e.compose.yml  website.nginx.conf
docs/: NEXT_STEPS.md  SPEC_file-tagging-integration.md  ai-builder.md  architecture.md  assets-overview.md  auth-strategy.md  catalog-hooks.md  code-improvement-assessment.md  core-hooks.md  demo-single-vm.md  directory-insights-archive-workflow.md  directory-insights-workflow.md  discord-server-setup.md  docker-runtime.md  e2e-and-benchmarks.md  environment-config.md  environmental-observatory-workflows.md  event-ordering.md  event-schemas.md  events.md  example-bundle-storage.md  example-config-descriptor.md  example-descriptor-bundles.md  file-drop-watcher.md  filestore-drift-playbooks.md  filestore.md  filesystem-workflow-reference.md  fleet-telemetry-workflows.md  flink.md  import-ux-plan.md  (+29 more)
services/codex-proxy/: .gitignore  README.md  pyproject.toml
services/codex-proxy/codex_proxy/: __init__.py  app.py
services/codex-proxy/codex_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+2212 files in other folders)
